--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   shared_preferences: ^2.5.3
   image_picker: ^1.1.2
   intl: ^0.20.2
+  sqflite: ^2.4.1
+  path_provider: ^2.1.5
 
 
 
