--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   sqflite: ^2.4.1
   path_provider: ^2.1.5
   connectivity_plus: ^6.1.4
+  firebase_core: ^3.14.0
+  firebase_auth: ^5.6.0
 
 
 
