--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   connectivity_plus: ^6.1.4
   firebase_core: ^3.14.0
   firebase_auth: ^5.6.0
+  firebase_messaging: ^15.2.9
+  flutter_local_notifications: ^19.3.0
 
 
 
