--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,7 +42,7 @@ dependencies:
   convex_bottom_bar: ^3.2.0
   shared_preferences: ^2.5.3
   image_picker: ^1.1.2
-  intl: ^0.20.2
+  intl: 
   sqflite: ^2.4.1
   path_provider: ^2.1.5
   connectivity_plus: ^6.1.4
@@ -50,6 +50,7 @@ dependencies:
   firebase_auth: ^5.6.0
   firebase_messaging: ^15.2.9
   flutter_local_notifications: ^19.3.0
+  flutter_localization:
 
 
 
@@ -63,6 +64,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -70,13 +72,19 @@ dev_dependencies:
 # The following section is specific to Flutter packages.
 flutter:
 
+
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
+
+arb-dir: lib/l10n
+template-arb-file: app_en.arb
+output-localization-file: app_localizations.dart
 
   # To add assets to your application, add an assets section, like this:
-  assets:
+assets:
     - assets/
 
 
