--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -9,9 +9,9 @@ plugins {
 }
 
 android {
+    compileSdkVersion 35  // Add this line if missing
     namespace = "com.example.flutter_tutorial_april"
-    compileSdk = flutter.compileSdkVersion
-    ndkVersion = flutter.ndkVersion
+    ndkVersion flutter.ndkVersion
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
@@ -19,7 +19,7 @@ android {
     }
 
     kotlinOptions {
-        jvmTarget = JavaVersion.VERSION_1_8
+        jvmTarget = '1.8'
     }
 
     defaultConfig {
@@ -27,8 +27,8 @@ android {
         applicationId = "com.example.flutter_tutorial_april"
         // You can update the following values to match your application needs.
         // For more information, see: https://flutter.dev/to/review-gradle-config.
-        minSdk = 23
-        targetSdk = flutter.targetSdkVersion
+        minSdkVersion 21  // Geolocator requires minimum API 21
+        targetSdkVersion 35
         versionCode = flutter.versionCode
         versionName = flutter.versionName
     }
