--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_messaging: ^15.2.9
   flutter_local_notifications: ^19.3.0
   flutter_localization:
+  geolocator: ^14.0.2
 
 
 
